--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "nuxt": "^3.3.2"
+  },
+  "overrides": {
+    "vue": "^3.2.47"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.7",
+    "pinia": "^2.0.33"
   }
 }
